tests/invalid/undeclared-output.pkl
/// Invariant 5 (publication discipline): a typed output field whose
/// name is not in the action's declared outputs fails eval — the
/// plugin-author safety net behind the `hidden outX = output("x")`
/// convention.
module tests.invalid.undeclaredOutput

extends "../../core/template.pkl"

import "../../core/resource.pkl"
import "../../core/host.pkl"
import "../../core/job.pkl"
import "../../core/values.pkl"
import "../support/testkit.pkl"

/// Plugin-author mistake: typed field references "digset", declared
/// output is "digest".
class BrokenAction extends testkit.TestAction {
  outputs { "digest" }
  hidden outDigest: values.RuntimeRef = output("digset")
}

res: resource.EphemeralResource = new {
  name = "res"
  provider = new testkit.TestProvider { provides { "bash" } }
}

h: host.Host = new { name = "h"; backedBy = res }

producer: BrokenAction = new {
  name = "p"
  requires { "bash" }
}

consumer: testkit.TestAction = new {
  name = "c"
  requires { "bash" }
  env { ["X"] = producer.outDigest }
}

pJob: job.Job = new {
  name = "producer"
  runsOn = h
  actions { producer }
}

cJob: job.Job = new {
  name = "consumer"
  runsOn = h
  needs { pJob }
  actions { consumer }
}

wf {
  name = "bad"
  resources { res }
  hosts { h }
  jobs { pJob; cJob }
}
